# trace-ninja

./: .gitignore  README.md
PythonTracer/: README.md  tracer.py
PythonTracer/testcov/: testfact.py
resources/: README  References.txt
resources/dlopen-example/: Makefile  README.md
resources/dlopen-example/include/: fact.h  fibo.h
resources/dlopen-example/src/: dlopen-example.c  fact.c  fibo.c
tracer/: README.md
tracer/libTracer/: CMakeLists.txt
tracer/libTracer/include/: tracer.h
tracer/libTracer/src/: tracer.c  tracer.cpp
tracer/nmParser/: CMakeLists.txt
tracer/nmParser/src/: mapParser.cpp  nmParser.cpp
tracer/tests/: CMakeLists.txt  symbols.sh
tracer/tests/chrono/: CMakeLists.txt
tracer/tests/chrono/src/: chrono.cpp
tracer/tests/cppTemplates/: CMakeLists.txt
tracer/tests/cppTemplates/include/: mylib.h
tracer/tests/cppTemplates/src/: cppTemplates.cpp
tracer/tests/cppTest/: CMakeLists.txt
tracer/tests/cppTest/src/: cppTest.cpp
tracer/tests/ctest/: CMakeLists.txt
tracer/tests/ctest/src/: ctest.c
tracer/traceParser/: CMakeLists.txt
tracer/traceParser/include/: mapParser.h  nmParser.h  utils.h
tracer/traceParser/src/: mapParser.cpp  nmParser.cpp  traceParser.cpp  utils.cpp
